--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "private": true,
   "homepage": "https://timingjl.github.io/Snake",
   "dependencies": {
+    "immutable": "^3.8.2",
+    "lodash": "^4.17.11",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.5",
+    "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
+    "reselect": "^4.0.0",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
