--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
+    "redux-devtools": "^3.4.1",
     "redux-immutable": "^4.0.0",
+    "redux-observable": "^1.0.0",
     "reselect": "^4.0.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "styled-components": "^3.4.10"
   },
   "scripts": {
